[package]
name = "peregrine-r"
version = "0.4.13"
authors = ["Jason Chin <cschin@omnibio.ai>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
glob = "0.3.0"
serde = { version = "1", features = ["derive"] }
petgraph = { git = "https://github.com/cschin/petgraph.git", branch = "fx_index_map" } # base on petgraph = "0.5.1"
libc = "0.2"
memmap = "0.7.0"
structview = "1.1.0"
byteorder = "1.3.4"
rand = "0.7.3"
rustc-hash = "1.1.0"
# flate2 = { version ="1.0", features = ["zlib"] }
flate2 = "1.0"
clap = "2"
threadpool = "1.8.1"
num_cpus = "1.13.0"
log = { version = "^0.4.5", features = ["std"] }
simple_logger = "2.1.0"
sysinfo = "0.15.3"
mimalloc = { version = "0.1.17", default-features = false }
rayon = "1.5.0"
intervaltree = "0.2.6"
lazy_static = "1.4.0"
regex = "1"
